# agentix

./: .gitignore  Cargo.toml  README.md
agentix/: CHANGELOG.md  Cargo.toml  countdown.py
agentix-macros/: Cargo.toml
agentix-macros/src/: lib.rs
agentix/docs/releases/: vNext.md
agentix/examples/: 01_streaming.rs  02_completion.rs  03_conversation.rs  04_tools.rs  05_mcp_client.rs  06_mcp_server.rs  07_agent.rs  08_structured_output.rs  09_deep_research.rs  10_claude_code.rs  11_reasoning.rs  agent_demo.rs  anthropic_demo.rs  cli_streaming.rs  gemini_demo.rs  graph.rs  interrupt.rs  memory.rs  openrouter_free.rs  readme_quick_example.rs
agentix/src/: agent.rs  bus.rs  claude_code_agent.rs  client.rs  config.rs  context.rs  error.rs  lib.rs  markers.rs  mcp.rs  mcp_server.rs  memory.rs  msg.rs  node.rs  provider.rs  request.rs  summarizer.rs  tool_trait.rs  types.rs
agentix/src/agent/: agent_core.rs  executor.rs  mod.rs  node.rs  stream.rs
agentix/src/api/: client.rs
agentix/src/raw/: mod.rs  shared.rs
agentix/src/raw/anthropic/: mod.rs  request.rs  response.rs
agentix/src/raw/claude_code/: mod.rs  session.rs
agentix/src/raw/deepseek/: mod.rs  request.rs  response.rs
agentix/src/raw/deepseek/request/: chat_completion.rs  message.rs  mod.rs  model.rs  response_format.rs  tool.rs  (+1 more)
agentix/src/raw/gemini/: mod.rs  request.rs  response.rs
agentix/src/raw/glm/: mod.rs  request.rs  response.rs
agentix/src/raw/grok/: mod.rs  request.rs  response.rs
agentix/src/raw/kimi/: mod.rs  request.rs
agentix/src/raw/openai/: mod.rs  request.rs  response.rs
agentix/src/raw/openrouter/: mod.rs  request.rs  response.rs
agentix/tests/: agent.rs  agent_turns.rs  llm_client.rs  mcp_server.rs  provider_integration.rs  readme_examples.rs  smoke_cache.rs  smoke_deepseek.rs  smoke_gemini.rs  smoke_openai.rs  tool_return_types.rs
agentix/tests/fixtures/anthropic/: complete_text.json  complete_tool_call.json  stream_text.sse  stream_tool_call.sse
agentix/tests/fixtures/chat_completions/: complete_tool_call.json  stream_tool_call.sse
agentix/tests/fixtures/gemini/: complete_text.json  complete_thinking_tool_call.json  stream_text.sse  stream_tool_call.sse
agentix/tests/fixtures/openai/: complete_text.json  complete_tool_call.json  stream_reasoning.sse  stream_text.sse  stream_tool_call.sse
(+9 files in other folders)
